[gd_scene load_steps=12 format=3 uid="uid://dg5dmtikklnwn"]

[ext_resource type="Script" path="res://Scene_Switcher/enemy/assault_tank.gd" id="1_4tft8"]
[ext_resource type="PackedScene" uid="uid://c25takgk0e4pj" path="res://Scene_Switcher/ammo/bombshell.tscn" id="2_d5cl6"]
[ext_resource type="Texture2D" uid="uid://caqdddrj3o273" path="res://Scene_Switcher/enemy/asset/tank.png" id="3_650x3"]
[ext_resource type="Texture2D" uid="uid://bgo5bfv0pyby4" path="res://Scene_Switcher/enemy/asset/vortex.png" id="4_10bd6"]
[ext_resource type="Texture2D" uid="uid://puovnjfvnrm0" path="res://Scene_Switcher/enemy/asset/tank_canon.png" id="4_cc358"]
[ext_resource type="Texture2D" uid="uid://cqmhyk0f6tb6p" path="res://Scene_Switcher/ammo/asset/fire_sparkles.png" id="6_4jwea"]
[ext_resource type="Animation" uid="uid://nkjfkttfa207" path="res://Scene_Switcher/ammo/animation/fire_tank.tres" id="7_2ymvu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3yaxg"]
size = Vector2(64, 159)

[sub_resource type="Gradient" id="Gradient_qwdap"]
offsets = PackedFloat32Array(0.162577, 0.831288, 0.990798)
colors = PackedColorArray(1, 0.607843, 0, 1, 0.526793, 5.72633e-07, 1.06417e-07, 0.560784, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_dsh3s"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1xgdx"]
_data = {
"fire_tank": ExtResource("7_2ymvu")
}

[node name="assault_tank" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_4tft8")
bullet_cooldown = 2.0
ammo_scene = ExtResource("2_d5cl6")

[node name="body_sprite" type="Sprite2D" parent="."]
self_modulate = Color(0.698039, 0.4, 0, 1)
scale = Vector2(0.31, 0.31)
texture = ExtResource("3_650x3")
flip_v = true

[node name="tower_sprite" type="Sprite2D" parent="body_sprite"]
self_modulate = Color(0.58785, 0.333422, 0, 1)
position = Vector2(-4.69417e-11, -103.226)
rotation = -3.14159
texture = ExtResource("4_cc358")
offset = Vector2(-0.681217, -124.483)

[node name="fire_sparkles" type="Sprite2D" parent="body_sprite/tower_sprite"]
position = Vector2(-3.22676, -377.42)
rotation = 3.14159
scale = Vector2(2.41935, 2.41935)
texture = ExtResource("6_4jwea")
flip_v = true
vframes = 3
frame = 2

[node name="target" type="Marker2D" parent="body_sprite/tower_sprite"]
position = Vector2(0, -412.903)
rotation = 3.14159
scale = Vector2(3.22581, 3.22581)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3yaxg")

[node name="left_wall" type="RayCast2D" parent="."]
target_position = Vector2(-104, 0)
collision_mask = 20

[node name="right_wall" type="RayCast2D" parent="."]
target_position = Vector2(104, 0)
collision_mask = 20

[node name="right_shoot" type="RayCast2D" parent="."]
position = Vector2(-16, 64)
target_position = Vector2(0, 600)

[node name="left_shoot" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 600)

[node name="Explosion" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 1.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_10bd6")
emission_shape = 1
emission_sphere_radius = 14.47
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 18.96
initial_velocity_max = 142.18
angular_velocity_max = 354.88
color_ramp = SubResource("Gradient_qwdap")

[node name="Smokes" type="Node2D" parent="."]

[node name="Smoke20" type="CPUParticles2D" parent="Smokes"]
position = Vector2(0, -56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_10bd6")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_dsh3s")

[node name="Smoke40" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, -16)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_10bd6")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_dsh3s")

[node name="Smoke60" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 0)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_10bd6")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_dsh3s")

[node name="Smoke80" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, 40)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_10bd6")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_dsh3s")

[node name="Death_Smoke" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("4_10bd6")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
color_ramp = SubResource("Gradient_dsh3s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1xgdx")
}
